// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HarnessPill renders a known harness with its logo 1`] = `
<div>
  <span
    class="inline-flex max-w-full items-center gap-1.5 rounded-full border border-primary bg-surface-primary px-2 py-0.5 text-xs"
  >
    <img
      alt=""
      class="h-3.5 w-3.5 shrink-0 object-contain"
      src="[object Object]"
    />
    <span
      class="truncate"
    >
      Claude Code
    </span>
  </span>
</div>
`;

exports[`HarnessPill renders an unknown harness with a fallback dot 1`] = `
<div>
  <span
    class="inline-flex max-w-full items-center gap-1.5 rounded-full border border-primary bg-surface-primary px-2 py-0.5 text-xs"
    title="mystery-client/1.0"
  >
    <span
      aria-hidden="true"
      class="inline-block h-1.5 w-1.5 shrink-0 rounded-full bg-secondary"
    />
    <span
      class="truncate"
    >
      Mystery Client
    </span>
  </span>
</div>
`;
